LoadBalancer-templates.yaml/alb.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template for an ALB, Target Groups, and Security Group

Resources:
  # Security Group for ALB
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for laravel admin ALB
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  # ALB
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: my-alb-lavareladminc
      Scheme: internet-facing
      Subnets: 
        - !Ref SubnetA
        - !Ref SubnetB
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup

  # Target Group for HTTP
  TargetGroupHTTP:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: MyTargetGroupHTTP
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: instance
      HealthCheckProtocol: HTTP
      HealthCheckPort: 80
      HealthCheckPath: /

  # Target Group for HTTPS
  TargetGroupHTTPS:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: MyTargetGroupHTTPS
      Port: 443
      Protocol: HTTPS
      VpcId: !Ref VPC
      TargetType: instance
      HealthCheckProtocol: HTTPS
      HealthCheckPort: 443
      HealthCheckPath: /

  # HTTP Listener
  HTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroupHTTP
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP


Parameters:
  VPC:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID for the ALB and Target Groups
  SubnetA:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet ID for the ALB
  SubnetB:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet ID for the ALB
